# EagleSignal-AI

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  DATA_SOURCES.md  Dockerfile  FUTURE_WORK.md  IMPLEMENTATION_STATUS.md  LICENSE  MARKET_FACTOR_CHECKLIST.md  PENDING_ITEMS.md  POLICY_THEME_WATCHLISTS.md  PRODUCT_REQUIREMENTS.md  README.md  REFERENCE_ANALYSIS.md  REMOTE_ACCESS.md  ROADMAP.md  RUNBOOK.md  SKILLS.md  VALIDATION_AND_LIVE_READINESS.md  VALIDATION_REPORT.md  WORKFLOW.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
config/: analysis_source_registry.yml  event_calendar.yml  policy_theme_watchlists.yml  watchlist.yml  weights.fitted.yml  weights.yml
docs/: architecture.md  market_factor_checklist.md  reference_analysis.md  workflow.md
prompts/: master_build_prompt.md
scripts/: fix-nvidia-gpu.bat  fix-nvidia-gpu.ps1  install_startup_collector.ps1  install_windows_task.ps1  install_windows_tasks_split.ps1  rerender_dashboard.py  run_intraday_job.ps1  run_research_job.ps1  run_research_job_loop.ps1  run_weekly_tune_job.ps1  show_windows_task.ps1
tests/: conftest.py  test_calendars.py  test_candidate_gate.py  test_config.py  test_dashboard_tabs.py  test_earnings.py  test_economic_event_impact.py  test_event_radar.py  test_factor_coverage.py  test_forecast.py  test_global_and_advisor.py  test_historical_store.py  test_impact.py  test_index_strategies.py  test_llm_sentiment.py  test_manual_trading.py  test_market_regime.py  test_news.py  test_options_edge.py  test_paper_trading.py  test_reliability.py  (+5 more)
(+63 files in other folders)
