[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eaglesignal"
version = "0.1.0"
description = "EagleSignal AI — U.S. equities/options/index prediction & decision intelligence (research only)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "EagleSignal AI contributors" }]
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "pydantic>=2.5",
    "PyYAML>=6.0",
    "python-dotenv>=1.0",
    "requests>=2.31",
    "yfinance>=0.2.40",
    "jinja2>=3.1",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
]

[project.optional-dependencies]
ml = ["scikit-learn>=1.3"]
dev = ["pytest>=8.0", "pytest-cov>=4.1", "ruff>=0.4"]

[project.scripts]
eaglesignal = "eaglesignal.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py311"
